fixed spacing between header, body, and footer

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,7 +22,7 @@ body {
   text-align: center;
   color: #FFE66D;
   padding-top: 5%;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   border-bottom: 1px solid #08171A;
 }
 
@@ -70,7 +70,7 @@ button {
 }
 
 #toDoBlock {
-  height: 500px;
+  height: 400px;
 }
 
 #toDoBtn,
@@ -131,7 +131,7 @@ button {
   bottom: 0;
   width: 100%;
   height: 100%;
-  margin-top: 75px;
+  margin-top: 50px;
   margin-bottom: 0px;
   padding-top: 15px;
   background-color: #f5f5f5;
